--- a/tank.io-client/project.json
+++ b/tank.io-client/project.json
@@ -22,6 +22,7 @@
         "src/core/EventCenter.js",
         "src/core/gui/InjectCCS.js",
         "src/core/gui/BaseGui.js",
+        "src/core/gui/BaseScene.js",
         "src/app.js",
         "src/Lobby.js",
         "src/resource.js"
