--- a/server/package.json
+++ b/server/package.json
@@ -28,6 +28,9 @@
   "dependencies": {
     "@colyseus/arena": "^0.14.7",
     "@colyseus/monitor": "^0.14.0",
-    "colyseus": "^0.14.9"
+    "colyseus": "^0.14.9",
+    "config": "^3.3.6",
+    "detect-collisions": "^3.1.1",
+    "tmx-parser": "^1.5.0"
   }
 }
