imp logic show game results

--- a/client/project.json
+++ b/client/project.json
@@ -34,9 +34,11 @@
         "src/GlobalVar.js",
         "src/resource.js",
         "src/modules/Constant.js",
+        "src/modules/game/gui/element/ElementGameResult.js",
         "src/modules/game/gui/entity/Bullet.js",
         "src/modules/game/gui/entity/Tank.js",
         "src/modules/game/gui/GuiGameControl.js",
+        "src/modules/game/gui/GuiGameResult.js",
         "src/modules/game/gui/GuiRoomInfo.js",
         "src/modules/game/gui/GuiWaitingToStart.js",
         "src/modules/game/gui/MapLayer.js",
