--- a/client/project.json
+++ b/client/project.json
@@ -31,6 +31,7 @@
         "src/core/Config.js",
         "src/core/gui/BaseScene.js",
         "src/core/gui/SceneMgr.js",
+        "src/core/LocalStorage.js",
         "src/core/Network.js",
         "src/GlobalVar.js",
         "src/resource.js",
@@ -50,9 +51,12 @@
         "src/modules/game/manager/GameRoom.js",
         "src/modules/game/manager/Input.js",
         "src/modules/game/MatchMaker.js",
+        "src/modules/lobby/ElementSkinTank.js",
         "src/modules/lobby/GuiJoinGame.js",
         "src/modules/lobby/GuiNewGame.js",
+        "src/modules/lobby/GuiSelectTank.js",
         "src/modules/lobby/PopupNotification.js",
-        "src/modules/lobby/SceneLobby.js"
+        "src/modules/lobby/SceneLobby.js",
+        "src/utils/ResourceUtils.js"
     ]
 }
